--- a/css/index.css
+++ b/css/index.css
@@ -141,7 +141,7 @@ h1 {
     padding-top: 40px;
 }
 
-.tackle-content button {
+.tackle-content a {
     width: 79px;
     height: 43px;
     padding: 2px;
